prepare to cf-pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3>П-38</h3>
       <h4>Лутфрахманов Дамир</h4>
       <h4>Сагабутдинов Даниил</h4>
-      <h4>И 1 не известный шакал</h4>
+      <h4>Маркин Егор</h4>
     </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
